--- a/NotaryGenie.Server/appsettings.json
+++ b/NotaryGenie.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=KISHAN;Database=NotaryGenie;User Id=kishan;"
+    "DefaultConnection": "Server=KISHAN;Database=NotaryGenie;User Id=kishan;Trusted_Connection=True;TrustServerCertificate=True;"
   },
     "Logging": {
       "LogLevel": {
